--- a/frontend/src/app/shared/ui/app-calendar/app-calendar.component.html
+++ b/frontend/src/app/shared/ui/app-calendar/app-calendar.component.html
@@ -1,5 +1,5 @@
 <div class="app-calendar">
-  <div class="app-calendar__header">
+  <!-- <div class="app-calendar__header">
     <button mat-icon-button type="button" (click)="goPreviousMonth()">
       <mat-icon>chevron_left</mat-icon>
     </button>
@@ -9,7 +9,7 @@
     <button mat-icon-button type="button" (click)="goNextMonth()">
       <mat-icon>chevron_right</mat-icon>
     </button>
-  </div>
+  </div> -->
 
   <mat-divider class="app-calendar__divider"></mat-divider>
 
@@ -23,13 +23,13 @@
 
   <mat-divider class="app-calendar__divider"></mat-divider>
 
-  <div class="app-calendar__footer">
+  <!-- <div class="app-calendar__footer">
     <button mat-button type="button" (click)="goToday()">Today</button>
     <span class="app-calendar__selection" *ngIf="selected">
       {{ selected | date: 'EEE, MMM d, y' }}
     </span>
     <span class="app-calendar__spacer"></span>
     <button mat-stroked-button type="button" (click)="cancel.emit()">Cancel</button>
-  </div>
+  </div> -->
 </div>
 
